--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,6 @@
 API_KEY_PATH=/home/ubuntu/.gemini/creds.json
+GOOGLE_CLOUD_LOCATION=us-central1
+GOOGLE_GENAI_USE_VERTEXAI=True
 
 # language set
 #LANGUAGE_CODE=ja-JP
