--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ google-auth
 google-cloud-texttospeech
 google-cloud-speech
 langchain
-langchain-google-vertexai
+langchain-google-vertexai==2.0.24
 opencv-python==4.10.0.84
